--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label>Name</label>
+		<input type="text" id="name" placeholder="Name"><br>
+
+		<lable>Phone Number</lable>
+		<input type="text" id="phone" placeholder="Phone Number">
+
+		<lable>Address</lable>
+		<input type="text" id="address" placeholder="Address">
+
+		<label>Have you ever lived with a Dog before?</label>
+		<input type="Checkbox" id="checkbox"><br>
+
+		<label>Please select your preferred breeds</label>
+			<select >
+				<option>Select</option>
+				<option>Ace</option>
+				<option>Max</option>
+				<option>leo</option>
+				<input type="select" id="multiSelect">
+		</select>
+
+		<button type="Submit">Submit</button><br>
+
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
