--- a/main.html
+++ b/main.html
@@ -13,10 +13,10 @@
 		<input type="text" id="name" placeholder="Name"><br>
 
 		<lable>Phone Number</lable>
-		<input type="text" id="phone" placeholder="Phone Number">
+		<input type="text" id="phone" placeholder="Phone Number"><br>
 
 		<lable>Address</lable>
-		<input type="text" id="address" placeholder="Address">
+		<input type="text" id="address" placeholder="Address"><br>
 
 		<label>Have you ever lived with a Dog before?</label>
 		<input type="Checkbox" id="checkbox"><br>
@@ -27,8 +27,8 @@
 				<option>Ace</option>
 				<option>Max</option>
 				<option>leo</option>
-				<input type="select" id="multiSelect">
-		</select>
+				<!-- <input type="select" id="multiSelect"> -->
+		</select><br>
 
 		<button type="Submit">Submit</button><br>
 
