--- a/main.html
+++ b/main.html
@@ -19,18 +19,16 @@
 		<input type="text" id="address" placeholder="Address"><br>
 
 		<label>Have you ever lived with a Dog before?</label>
-		<input type="Checkbox" id="checkbox"><br>
+		<input type="Checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
 
 		<label>Please select your preferred breeds</label>
-			<select >
-				<option>Select</option>
-				<option>Ace</option>
-				<option>Max</option>
-				<option>leo</option>
-				<!-- <input type="select" id="multiSelect"> -->
+			<select id="multiSelect">
+				<option value="bread1">Ace</option>
+				<option value="bread2">Max</option>
+				<option value="bread3">leo</option>
 		</select><br>
 
-		<button type="Submit">Submit</button><br>
+		<button type="Submit" id="submit">Submit</button><br>
 
 		
 	</form>
