--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 				<option value="bread3">leo</option>
 		</select><br>
 
-		<button type="Submit" id="submit">Submit</button><br>
+		<input type="Submit" id="submit" value="Submit">
 
 		
 	</form>
