--- a/main.html
+++ b/main.html
@@ -9,19 +9,19 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form>
-		<label>Name</label>
-		<input type="text" id="name" placeholder="Name"><br>
+		<label for="name">Name</label>
+		<input type="text" id="Name" placeholder="name"><br>
 
-		<lable>Phone Number</lable>
+		<lable for="phone">Phone Number</lable>
 		<input type="text" id="phone" placeholder="Phone Number"><br>
 
-		<lable>Address</lable>
+		<lable for="address">Address</lable>
 		<input type="text" id="address" placeholder="Address"><br>
 
-		<label>Have you ever lived with a Dog before?</label>
-		<input type="Checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
 
-		<label>Please select your preferred breeds</label>
+		<label for="multiSelect">Please select your preferred breeds</label>
 			<select id="multiSelect">
 				<option value="bread1">Ace</option>
 				<option value="bread2">Max</option>
@@ -29,8 +29,6 @@
 		</select><br>
 
 		<input type="Submit" id="submit" value="Submit">
-
-		
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
