--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<form>
 		<label for="name">Name</label>
-		<input type="text" id="Name" placeholder="name"><br>
+		<input type="text" id="name" placeholder="name"><br>
 
 		<lable for="phone">Phone Number</lable>
 		<input type="text" id="phone" placeholder="Phone Number"><br>
@@ -28,7 +28,7 @@
 				<option value="bread3">leo</option>
 		</select><br>
 
-		<input type="Submit" id="submit" value="Submit">
+		<input type="submit" id="submit" value="Submit">
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
