--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<form>
 		<label for="name">Name</label>
-		<input type="text" id="name" placeholder="name"><br>
+		<input type="text" id="name" placeholder="Name"><br>
 
 		<lable for="phone">Phone Number</lable>
 		<input type="text" id="phone" placeholder="Phone Number"><br>
